fixed spacing for animation

--- a/learnsortapp/src/Lvl1-MergeSort/MergeSortComponent.css
+++ b/learnsortapp/src/Lvl1-MergeSort/MergeSortComponent.css
@@ -302,7 +302,6 @@
     margin-left: 750px;
     margin-top: -20px;
     letter-spacing: 3.5px;
-    color: red;
 }
 
 .test10 {
